# lwm2m

./: CMakeLists.txt  README.md  cert.md  overlay-dtls-cert.conf  overlay-dtls.conf  prj.conf  west.sh
boards/: native_posix.conf
src/: ca_certificate.h  led.c  lwm2m-client.c
wireshark/: 2024-07-01.pcapng
